--- a/emi/emi.tex
+++ b/emi/emi.tex
@@ -40,8 +40,8 @@ For an EMI signal to be transmitted, we need a source of AC current and an anten
  Name & Rate & Time & Frequency & Antenna & BW \\
  \hline
  Power Line & 1 Hz & random pulse & uniform & power lines & $R < B$ \\
- Downlights & 50-60 Hz & pulse train & harmonics & house wiring & $R < B$ \\
- SMPS & 10-300 kHz & pulse train & harmonics & house wiring & $R > B$ \\
+ Lighting & 50-60 Hz & pulse train & harmonics & house wiring & $R < B$ \\
+ SMPS & 3-300 kHz & pulse train & harmonics & house wiring & $R > B$ \\
  DSL & 1-12 MHz & AWGN & AWGN & phone lines & $R > B$ \\
  Urban Sum & lower HF & AWGN & AWGN & power lines & $R > B$ \\
  \hline
